unpackaged/main/default/objects/RMA_Order__c/RMA_Order__c.object-meta.xml
<CustomObject>
    <label>RMA Order</label>
    <nameField>
        <displayFormat>RMA-{YY}{00000}{MM}</displayFormat>
        <label>RMA Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RMA Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>