unpackaged/main/default/objects/RMA_Order__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>Order_Id__r.Account__c</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>