unpackaged/main/default/objects/RMA_Order__c/fields/All_Next_Steps_Established__c.field-meta.xml
<CustomField>
    <fullName>All_Next_Steps_Established__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Next Steps Established</label>
    <type>Checkbox</type>
</CustomField>