unpackaged/main/default/objects/RMA_Order__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>RMA Orders</relationshipLabel>
    <relationshipName>RMA_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>