unpackaged/main/default/objects/RMA_Order__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RMA Orders</relationshipLabel>
    <relationshipName>RMA_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>