unpackaged/main/default/objects/RMA_Order__c/fields/Disposition_Date__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Date__c</fullName>
    <label>Last Disposition Date</label>
    <type>Date</type>
</CustomField>