unpackaged/main/default/objects/RMA_Order__c/fields/Expected_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Arrival_Date__c</fullName>
    <label>Lasted Expected Arrival Date</label>
    <type>Date</type>
</CustomField>