unpackaged/main/default/objects/RMA_Order__c/fields/Get_ERP_URL__c.field-meta.xml
<CustomField>
    <fullName>Get_ERP_URL__c</fullName>
    <formula>HYPERLINK("https://erp.xometry.com/orders/"+ Id,"Go to Order Summary in ERP", "_blank")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Get ERP URL</label>
    <type>Text</type>
</CustomField>