unpackaged/main/default/objects/RMA_Order__c/fields/OpsOrderPrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>OpsOrderPrimaryContact__c</fullName>
    <description>Primary Contact on Ops Order</description>
    <formula>Order_Id__r.PrimaryContact__c</formula>
    <inlineHelpText>Primary Contact on Ops Order</inlineHelpText>
    <label>Ops Order Primary Contact</label>
    <type>Text</type>
</CustomField>