unpackaged/main/default/objects/RMA_Order__c/fields/Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Id</label>
    <referenceTo>Ops_Order__c</referenceTo>
    <relationshipLabel>RMA Orders</relationshipLabel>
    <relationshipName>RMA_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>