unpackaged/main/default/objects/RMA_Order__c/fields/Order_subtotal__c.field-meta.xml
<CustomField>
    <fullName>Order_subtotal__c</fullName>
    <formula>Order_Id__r.OrderTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>