unpackaged/main/default/objects/RMA_Order__c/fields/Overall_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Overall_Disposition__c</fullName>
    <defaultValue>"Pending"</defaultValue>
    <label>Overall Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RMA Completly Accepted</fullName>
            </value>
            <value>
                <fullName>RMA Partialy Accepted</fullName>
            </value>
            <value>
                <fullName>RMA rejected</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>