unpackaged/main/default/objects/RMA_Order__c/fields/Overall_QE_Comments__c.field-meta.xml
<CustomField>
    <fullName>Overall_QE_Comments__c</fullName>
    <label>Overall QE Comments</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>