unpackaged/main/default/objects/RMA_Order__c/fields/Overall_RMA_Manager_Notes__c.field-meta.xml
<CustomField>
    <fullName>Overall_RMA_Manager_Notes__c</fullName>
    <label>Overall RMA Manager Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>