unpackaged/main/default/objects/RMA_Order__c/fields/Overall_Root_Cause_Notes__c.field-meta.xml
<CustomField>
    <fullName>Overall_Root_Cause_Notes__c</fullName>
    <label>Overall Root Cause Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>