unpackaged/main/default/objects/RMA_Order__c/fields/POD__c.field-meta.xml
<CustomField>
    <fullName>POD__c</fullName>
    <formula>TEXT(Order_Id__r.POD__c)</formula>
    <label>POD</label>
    <type>Text</type>
</CustomField>