unpackaged/main/default/objects/RMA_Order__c/fields/PONumber__c.field-meta.xml
<CustomField>
    <fullName>PONumber__c</fullName>
    <description>PO Number on the Ops Order Obj</description>
    <formula>Order_Id__r.PONumber__c</formula>
    <inlineHelpText>Read from Ops Order's PO Number Field</inlineHelpText>
    <label>PO Number</label>
    <type>Text</type>
</CustomField>