unpackaged/main/default/objects/RMA_Order__c/fields/Quantity_RMA_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Quantity_RMA_Line_Items__c</fullName>
    <inlineHelpText>Date when the order items are expected to arrive at the destination location</inlineHelpText>
    <label>Quantity RMA Line Items</label>
    <summaryForeignKey>Return_Order_Line_Item__c.RMA_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>