unpackaged/main/default/objects/RMA_Order__c/fields/Total_customer_price__c.field-meta.xml
<CustomField>
    <fullName>Total_customer_price__c</fullName>
    <label>Total customer price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>