unpackaged/main/default/objects/RMA_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Contact__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Quantity_RMA_Line_Items__c</columns>
    <columns>Total_customer_price__c</columns>
    <columns>All_Next_Steps_Established__c</columns>
    <columns>Overall_RMA_Manager_Notes__c</columns>
    <columns>Order_Id__c</columns>
    <columns>PONumber__c</columns>
    <columns>POD__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All RMA Order List View</label>
</ListView>