unpackaged/main/default/objects/RMA_Order__c/listViews/CPC_RMA_Team_Orders.listView-meta.xml
<ListView>
    <fullName>CPC_RMA_Team_Orders</fullName>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>NAME</columns>
    <columns>Overall_Disposition__c</columns>
    <columns>Case__c</columns>
    <columns>Contact__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Quantity_RMA_Line_Items__c</columns>
    <columns>Total_customer_price__c</columns>
    <columns>All_Next_Steps_Established__c</columns>
    <columns>Overall_RMA_Manager_Notes__c</columns>
    <columns>Order_Id__c</columns>
    <columns>POD__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>contains</operation>
        <value>Jonathan,Isabelle,Joel,Christopher</value>
    </filters>
    <filters>
        <field>Overall_Disposition__c</field>
        <operation>notEqual</operation>
        <value>RMA Completly Accepted,RMA rejected</value>
    </filters>
    <label>CPC RMA Team Open RMA Orders</label>
    <sharedTo>
        <role>CPC_Leadership</role>
    </sharedTo>
</ListView>